// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Process HJSON nodes correctly correctly creates a node from HJSON which is a single object 1`] = `
Array [
  Array [
    Object {
      "blue": true,
      "children": Array [],
      "funny": "yup",
      "id": "f0c08ade-1e52-5eb8-9f2d-e8e05b0db352",
      "internal": Object {
        "contentDigest": "8838e569ae02d98806532310fb2a577a",
        "type": "FooHJson",
      },
      "parent": "whatever",
    },
  ],
]
`;

exports[`Process HJSON nodes correctly correctly creates a node from HJSON which is a single object 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "blue": true,
        "children": Array [],
        "funny": "yup",
        "id": "f0c08ade-1e52-5eb8-9f2d-e8e05b0db352",
        "internal": Object {
          "contentDigest": "8838e569ae02d98806532310fb2a577a",
          "type": "FooHJson",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "{
  id: foo
  blue: true
  funny: yup
}",
        "dir": "/tmp/foo/",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/hjson",
          "name": "test",
        },
        "name": "nodeName",
        "parent": "SOURCE",
      },
    },
  ],
]
`;

exports[`Process HJSON nodes correctly correctly creates nodes from HJSON which is an array of objects 1`] = `
Array [
  Array [
    Object {
      "blue": true,
      "children": Array [],
      "funny": "yup",
      "id": "f0c08ade-1e52-5eb8-9f2d-e8e05b0db352",
      "internal": Object {
        "contentDigest": "8838e569ae02d98806532310fb2a577a",
        "type": "NodeNameHJson",
      },
      "parent": "whatever",
    },
  ],
  Array [
    Object {
      "blue": false,
      "children": Array [],
      "funny": "nope",
      "id": "593b64d4-5b38-556a-b3b8-897a6c51050a",
      "internal": Object {
        "contentDigest": "f624311d932d73dcd416d2a8bea2b67d",
        "type": "NodeNameHJson",
      },
      "parent": "whatever",
    },
  ],
]
`;

exports[`Process HJSON nodes correctly correctly creates nodes from HJSON which is an array of objects 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "blue": true,
        "children": Array [],
        "funny": "yup",
        "id": "f0c08ade-1e52-5eb8-9f2d-e8e05b0db352",
        "internal": Object {
          "contentDigest": "8838e569ae02d98806532310fb2a577a",
          "type": "NodeNameHJson",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "[
  {
    id: foo
    blue: true
    funny: yup
  }
  {
    blue: false
    funny: nope
  }
]",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/hjson",
          "name": "test",
        },
        "name": "nodeName",
        "parent": "SOURCE",
      },
    },
  ],
  Array [
    Object {
      "child": Object {
        "blue": false,
        "children": Array [],
        "funny": "nope",
        "id": "593b64d4-5b38-556a-b3b8-897a6c51050a",
        "internal": Object {
          "contentDigest": "f624311d932d73dcd416d2a8bea2b67d",
          "type": "NodeNameHJson",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "[
  {
    id: foo
    blue: true
    funny: yup
  }
  {
    blue: false
    funny: nope
  }
]",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "application/hjson",
          "name": "test",
        },
        "name": "nodeName",
        "parent": "SOURCE",
      },
    },
  ],
]
`;
